# lethe

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Containerfile  Dockerfile  MIGRATION-SPEC.md  README.md  VISION.md  docker-compose.gateway.yml  install.sh  pyproject.toml  resolve_session.session  uninstall.sh  update.sh
.github/workflows/: release.yml
config/: identity.md  model_catalog.json  model_context_limits.json  project.md  tools.md
config/blocks/: conversation_summary.meta.json  human.md  human.meta.json  identity.md  identity.meta.json  persona.md  project.md  tools.md
config/prompts/: active_tasks.md  actor_max_turns_handoff.md  actor_previous_turn.md  actor_principal_preamble.md  actor_principal_rules.md  actor_research_framer.md  actor_research_hypothesis.md  actor_research_judge.md  actor_restart_notice.md  actor_subagent_preamble.md  agent_instructions.md  agent_system_fallback.md  agent_tools.md  claude_persona.md  cognition_decide.md  curator_curate.md  curator_extract_notes.md  curator_harvest.md  curator_summarize_completed.md  dmn_system.md  drive_evaluation.md  heartbeat_message.md  heartbeat_message_full.md  heartbeat_open_work.md  heartbeat_summarize.md  hippocampus_acausal_warning.md  hippocampus_archival_header.md  hippocampus_conversation_header.md  hippocampus_notes_header.md  hippocampus_recall_headers.md  hippocampus_relevance.md  hippocampus_summarize.md  llm_heartbeat_system.md  llm_nudge_act.md  llm_nudge_detect.md  llm_summarize.md  mini_app_artifact.md  notes_extract.md  organizer_evaluate.md  tool_loop_wrap_up.md  (+1 more)
docs/: notes-curator-proposal.md
docs/architecture/: split-conscious-subconscious.md
examples/: measure_initial_context.rs
gateway/: Dockerfile  __init__.py  config.py  main.py  models.py  pool.py  requirements.txt  router.py
migrator/src/: dest.rs
scripts/: container-setup.sh  delete_agent.py  install.sh  lethe-telegram-foreground  migrate_persona_to_identity.py  migrate_to_actors.py  package-migrator  package-release  resolve_telegram_username.py  train_lora.py
skills/: verification_mandatory.md
src/: actor.rs  agent.rs  api.rs  archival.rs  background.rs  config.rs  curator.rs  heartbeat.rs  hippocampus.rs  lib.rs  llm.rs  main.rs  memory.rs  message_metadata.rs  messages.rs  mini_app.rs  models.rs  notes.rs  prompts.rs  runtime.rs  semantic.rs  sqlite_ext.rs  store.rs  telegram.rs  todos.rs  transcription.rs  truncate.rs
src/actor/: background.rs  helpers.rs  notification.rs  registry.rs  runtime.rs  tests.rs
src/agent/: summarizer.rs  tool_context.rs  tool_loop.rs
src/cli/: backup.rs  init.rs  (+5 more)
tests/: __init__.py  test_actor.py  test_api_gateway.py  test_architecture_integration.py  test_conversation.py  test_dmn.py  test_hippocampus.py  test_llm_config.py  test_notes.py  test_openai_oauth.py  test_prompt_assembly.py  test_signal.py  test_telegram_guard_integration.py  test_telegram_reactions.py  test_telegram_stickers.py  test_telegram_turn_guard.py  test_tools.py  test_transcription.py
(+144 files in other folders)
